SC-2299 Restructuring actor-service layer (#897)
* SC-2299 Renaming service module to controller

* SC-2299 Renaming service to controller

* SC-2299 Renaming service module to controller

* SC-2299 Renaming service module to controller

* SC-2299 Renaming service module to controller

* SC-2299 Renaming service module to controller

* SC-2299 Renaming service module to controller

* SC-2299 Fixing Testcases

* SC-2299 Fixing Testcases

* SC-2299 Fixing Testcases

* Updating jenkins file

* SC-2299 Actor Service changes

* SC-2299 Actor Service changes

* SC-2299 Actor Service changes

* SC-2299 Actor Service changes

* Fixing imports

* Fixing imports

* Fixing imports

* SC-2299 Resolving import issues

* Fixing imports

* Updating the circle-ci coverage

* Updating the circle-ci coverage

* Updating the circle-ci coverage

* Updating the circle-ci coverage