@@ -67,35 +67,4 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 	</dependencies>
-
-	<build>
-		<sourceDirectory>${basedir}/src/main/java</sourceDirectory>
-		<testSourceDirectory>${basedir}/src/test/java</testSourceDirectory>
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.8.0</version>
-                    <configuration>
-                      <release>11</release>
-                    </configuration>
-				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-surefire-plugin</artifactId>
-					<version>3.0.0-M4</version>
-					<configuration>
-                        <argLine>--illegal-access=permit</argLine>
-						<argLine>@{argLine} -Xmx1024m -XX:MaxPermSize=256m</argLine>
-                        <argLine>--add-opens java.xml/jdk.xml.internal=ALL-UNNAMED</argLine>
-						<includes>
-							<include>**/*Spec.java</include>
-							<include>**/*Test.java</include>
-						</includes>
-					</configuration>
-				</plugin>
-			</plugins>
-		</pluginManagement>
-	</build>
 </project>
